# silukman_image_vectorizer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  image_vectorizer.spec  main.py  pyproject.toml  pyrefly.toml  requirements.txt
.github/workflows/: build.yml  create_tag.yml  publish_pypi.yml  release.yml
app/: __init__.py  cli.py  main_window.py
app/config/: settings.py
app/core/: constants.py  image_pipeline.py  paths.py  vectorization_engine.py  vectorizer_backend.py
app/resources/: __init__.py  icon.icns
app/services/: batch_processor.py  color_palette.py  image_loader.py  svg_exporter.py
app/ui/: theme.py
docs/: README.md  architecture.md  checklist.md
docs/architecture/: ARCHITECTURE.md
docs/architecture/interface_governance/: README.md
docs/architecture/models/: README.md
docs/architecture/pipeline/: README.md
docs/assets/: README.md
docs/developer/: BUILD_AND_PACKAGING.md  CI_CD_AUTOMATION.md  COMPILATION_RELEASE_GUIDE.md  DATASET_BENCHMARKING.md  DEVELOPER_SETUP.md  QUALITY_METRICS.md  README.md  VERIFICATION_GUIDE.md
docs/product/: GLOSSARY.md  IDEAS_AND_RESEARCH.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_STATUS.md  PROJECT_OVERVIEW.md  README.md  ROADMAP.md
docs/user/: CLI_WORKFLOW.md  DOCKER_PODMAN_DEPLOYMENT.md  HARDWARE_ACCELERATION.md  HARDWARE_TERMINAL_GOVERNOR.md  LOCAL_PRESETS_SYNC.md  PERFORMANCE_GUIDELINE.md  README.md  TROUBLESHOOTING.md  UI_WORKFLOW.md
scripts/: build_app.py  run_color_benchmark.py  run_dev.py
